Updated wiki address

--- a/app/views/_menu.html
+++ b/app/views/_menu.html
@@ -72,7 +72,7 @@
     				
     				*{ ***** HELP ***** }*
     				<li>
-    					<a href="http://settlers.valhalla.fr/wiki/myrealm/" target="_blank">
+    					<a href="http://wiki.tsolc.eu/myrealm/" target="_blank">
     						<i class="icon-question-sign icon-white"></i> &{'help'}
     					</a>
     				</li>
